# Line-Segment-Merger

./: BUILD.md  CMakeLists.txt  LICENSE  README.md  Writeup.docx  Writeup.md
include/take_home_test/: deserialize.h  hash.h  linesegment.h  merge.h
source/: deserialize.cpp  hash.cpp  linesegment.cpp  main.cpp  merge.cpp
test/: tests.cpp
test/assets/: 1-reference.json  1-split.json
